--- a/index.html
+++ b/index.html
@@ -1,66 +1,40 @@
 <!DOCTYPE html>
-<html lang="th">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>ควบคุมไฟ ESP32</title>
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-  <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin-top: 50px;
-      background: #f0f0f0;
-    }
-    h1 {
-      color: #333;
-    }
-    button {
-      font-size: 24px;
-      padding: 12px 30px;
-      margin: 20px;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-    .on {
-      background-color: #4CAF50;
-      color: white;
-    }
-    .off {
-      background-color: #f44336;
-      color: white;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <title>ESP32 Light Control</title>
 </head>
 <body>
-  <h1>💡 ควบคุมไฟ ESP32 ผ่าน Supabase</h1>
-  <button class="on" onclick="turnOn()">เปิดไฟ</button>
-  <button class="off" onclick="turnOff()">ปิดไฟ</button>
+  <h1>esp32-light-control</h1>
+  <button id="on">เปิดไฟ</button>
+  <button id="off">ปิดไฟ</button>
 
   <script>
-    // เชื่อมต่อกับ Supabase
     const supabaseUrl = 'https://idfzbvmyfcxxauclnmdi.supabase.co';
-    const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlkZnpidm15ZmN4eGF1Y2xubWRpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg5NTg2MzIsImV4cCI6MjA2NDUzNDYzMn0.F_i4QSWNMiZ6k7JBk5CPUuko0S6DU3ks1M77T_la9xU';
-    const supabase = supabase.createClient(supabaseUrl, supabaseKey);
+    const apiKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'; // ใส่ให้ครบ
+    const table = 'control';
 
-    async function turnOn() {
-      const { error } = await supabase
-        .from('switch')
-        .update({ status: 'ON' })
-        .eq('id', 1);
-      if (error) alert('เกิดข้อผิดพลาด: ' + error.message);
-      else alert('✅ ไฟเปิดแล้ว');
+    async function sendStatus(status) {
+      const res = await fetch(`${supabaseUrl}/rest/v1/${table}`, {
+        method: 'POST',
+        headers: {
+          'Content-Type': 'application/json',
+          'apikey': apiKey,
+          'Authorization': `Bearer ${apiKey}`,
+          'Prefer': 'return=minimal'
+        },
+        body: JSON.stringify({ status })
+      });
+
+      if (res.ok) {
+        console.log("ส่งคำสั่งสำเร็จ: " + status);
+      } else {
+        console.error("ส่งไม่สำเร็จ", await res.text());
+      }
     }
 
-    async function turnOff() {
-      const { error } = await supabase
-        .from('switch')
-        .update({ status: 'OFF' })
-        .eq('id', 1);
-      if (error) alert('เกิดข้อผิดพลาด: ' + error.message);
-      else alert('🔴 ไฟปิดแล้ว');
-    }
+    document.getElementById("on").addEventListener("click", () => sendStatus("on"));
+    document.getElementById("off").addEventListener("click", () => sendStatus("off"));
   </script>
 </body>
 </html>
