--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <script>
     const supabaseUrl = 'https://idfzbvmyfcxxauclnmdi.supabase.co';
-    const apiKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'; // ใส่ให้ครบ
+    const apiKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImlkZnpidm15ZmN4eGF1Y2xubWRpIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDg5NTg2MzIsImV4cCI6MjA2NDUzNDYzMn0.F_i4QSWNMiZ6k7JBk5CPUuko0S6DU3ks1M77T_la9xU'; // ใส่ให้ครบ
     const table = 'control';
 
     async function sendStatus(status) {
